--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ tacker.tacker.device.drivers =
 tacker.tacker.mgmt.drivers =
     noop = tacker.vm.mgmt_drivers.noop:DeviceMgmtNoop
     openwrt = tacker.vm.mgmt_drivers.openwrt.openwrt:DeviceMgmtOpenWRT
+    msactivator = tacker.vm.mgmt_drivers.msactivator.msactivator:DeviceMgmtMSActivator
 tacker.tacker.monitor.drivers =
     ping = tacker.vm.monitor_drivers.ping.ping:VNFMonitorPing
     http_ping = tacker.vm.monitor_drivers.http_ping.http_ping:VNFMonitorHTTPPing
